--- a/Timeboard-web/config/database.yml
+++ b/Timeboard-web/config/database.yml
@@ -3,9 +3,18 @@
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
+#development:
+#  adapter: sqlite3
+#  database: db/development.sqlite3
+#  pool: 5
+#  timeout: 5000
+
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: mysql2
+  database: timelineDB
+  username: awsadmin
+  password: gaiganmaganma
+  host: timelinedb.cpt8pv5fluom.us-west-1.rds.amazonaws.com
   pool: 5
   timeout: 5000
 
