--- a/Timeboard-web/Gemfile
+++ b/Timeboard-web/Gemfile
@@ -1,5 +1,8 @@
 source 'https://rubygems.org'
 
+gem 'anjlab-bootstrap-rails', :require => 'bootstrap-rails',
+                              :github => 'anjlab/bootstrap-rails'
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.0.0'
 
@@ -50,3 +53,5 @@ group :development, :test do
   gem 'rspec-rails', '2.13.1'
   gem 'mysql2'
 end
+
+gem 'bootstrap-sass'
