--- a/Timeboard-web/Gemfile
+++ b/Timeboard-web/Gemfile
@@ -6,10 +6,9 @@ gem 'anjlab-bootstrap-rails', :require => 'bootstrap-rails',
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.0.0'
 
+gem 'rake', '10.1.0'
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3'
-
-gem 'mysql2'
 
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.0'
@@ -53,5 +52,7 @@ group :development, :test do
   gem 'rspec-rails', '2.13.1'
   gem 'mysql2'
 end
+
+gem 'mysql2'
 
 gem 'bootstrap-sass'
