--- a/Timeboard-web/Gemfile
+++ b/Timeboard-web/Gemfile
@@ -51,6 +51,9 @@ end
 group :development, :test do
   gem 'rspec-rails', '2.13.1'
   gem 'mysql2'
+  gem 'selenium-webdriver', '2.35.1'
+  gem 'capybara', '2.1.0'
+  gem 'guard-rspec', '2.5.0'
 end
 
 gem 'mysql2'
