--- a/Timeboard-web/Gemfile
+++ b/Timeboard-web/Gemfile
@@ -3,6 +3,9 @@ source 'https://rubygems.org'
 gem 'anjlab-bootstrap-rails', :require => 'bootstrap-rails',
                               :github => 'anjlab/bootstrap-rails'
 
+
+gem 'bcrypt-ruby', '3.0.1'
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.0.0'
 
