--- a/Timeboard-web/Gemfile
+++ b/Timeboard-web/Gemfile
@@ -57,6 +57,7 @@ group :development, :test do
   gem 'selenium-webdriver', '2.35.1'
   gem 'capybara', '2.1.0'
   gem 'guard-rspec', '2.5.0'
+  gem 'wdm'
 end
 
 gem 'mysql2'
