--- a/Timeboard-web/Gemfile
+++ b/Timeboard-web/Gemfile
@@ -57,7 +57,10 @@ group :development, :test do
   gem 'selenium-webdriver', '2.35.1'
   gem 'capybara', '2.1.0'
   gem 'guard-rspec', '2.5.0'
-  gem 'wdm'
+end
+
+group :test do
+  gem 'factory_girl_rails', '4.2.1'
 end
 
 gem 'mysql2'
